--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -6,4 +6,4 @@ RUN apt-get update && \
 RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ && \
     docker-php-ext-install -j$(nproc) mcrypt mysqli pdo_mysql iconv gd
 
-ENTRYPOINT ["docker-php-entrypoint", "php-fpm"]
+CMD [ "docker-php-entrypoint", "php-fpm" ]
