--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     networks:
       - my-net
     volumes:
-      - ".:/var/www"
+      - .:/var/www
     working_dir: /var/www
 
   nginx:
@@ -25,11 +25,11 @@ services:
     networks:
       - my-net
     ports:
-      - "80:80"
-      - "443:443"
+      - 80:80
+      - 443:443
     volumes:
-      - ".:/var/www"
-      - "./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf"
+      - .:/var/www
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     working_dir: /var/www
 
   mysql:
@@ -40,9 +40,9 @@ services:
     networks:
       - my-net
     ports:
-      - "33060:3306"
+      - 33060:3306
     volumes:
-      - "./.db_data:/var/lib/mysql"
+      - ./.db_data:/var/lib/mysql
 
 networks:
   my-net:
