--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,9 @@
 .git
 .db_data
 .idea
-bootstrap/cache/**
+bootstrap/cache
 node_modules
-storage/app/**
-storage/framework/cache/**
-storage/framework/sessions/**
-storage/framework/testing/**
-storage/framework/views/**
-storage/logs/**
+public
+storage
 vendor
 .env
