--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,11 @@ services:
     depends_on:
       - mysql
     environment:
-      DB_HOST: mysql
-      DB_DATABASE: mydb
-      DB_USERNAME: root
-      DB_PASSWORD: 123456
+      DB_HOST: ${DB_HOST}
+      DB_DATABASE: ${DB_DATABASE}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      REDIS_HOST: ${REDIS_HOST}
     volumes:
       - .:/var/www
     working_dir: /var/www
@@ -30,9 +31,16 @@ services:
   mysql:
     image: mysql:5.7
     environment:
-      MYSQL_ROOT_PASSWORD: 123456
-      MYSQL_DATABASE: mydb
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
     ports:
       - 3306:3306
     volumes:
       - ./.db_data:/var/lib/mysql
+
+  redis:
+    image: redis:4.0
+    ports:
+      - 6379:6379
+    volumes:
+      - ./.rds_data:/data
