--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -4,7 +4,7 @@ LABEL maintainer="João Pedro Benedetti Misturini <joao.benedetti.misturini@gmai
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends mysql-client libfreetype6-dev libpng-dev && \
-    apt-get install -y --no-install-recommends libjpeg62-turbo-dev libxml2-dev && \
+    apt-get install -y --no-install-recommends libjpeg62-turbo-dev libxml2-dev zip unzip && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
 RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ && \
@@ -13,5 +13,7 @@ RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-di
 RUN pecl install xdebug && docker-php-ext-enable xdebug
 
 COPY docker/php/xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
+
+COPY --from=composer /usr/bin/composer /usr/bin/composer
 
 CMD [ "docker-php-entrypoint", "php-fpm" ]
